# cifar10-classifier-experiments

./: .gitignore  pyproject.toml
Coursework Brief/: group ak.docx
Coursework Code/: base_model_plot.ipynb  best_model_plot.ipynb  catastrophic_forgetting_v2.ipynb  part1_cifar10.ipynb  part2_food101_transfer_learning.ipynb  part3_vit_vs_resnet_cifar100.ipynb
Lecture Slides/VSCode ECS7026P/week_01/lecture/: 01_Tensor_Data_Processing.ipynb
Lecture Slides/VSCode ECS7026P/week_02/lab/: 01_Curve_Fitting.ipynb  02_Curve_Fitting_Answers.ipynb
Lecture Slides/VSCode ECS7026P/week_02/lecture/: 01_Automatic_Differentiation.ipynb
Lecture Slides/VSCode ECS7026P/week_03/lab/: 01_Curve_Fitting.ipynb  02_Curve_Fitting_Solutions.ipynb
Lecture Slides/VSCode ECS7026P/week_03/lecture/: 01_Linear_Regression.ipynb  02_Linear_Regression_from_Scratch.ipynb  03_Linear_Regression_Concise.ipynb
Lecture Slides/VSCode ECS7026P/week_04/lab/: 01_Autoregressive_Model.ipynb  02_Autoregressive_Model_Solutions.ipynb
Lecture Slides/VSCode ECS7026P/week_04/lecture/: 01_Softmax_Regression.ipynb  02_Softmax_Regression_Concise.ipynb
Lecture Slides/VSCode ECS7026P/week_05/lab/: 01_Multilayer_Perceptron.ipynb  02_Multilayer_Perceptron_Solutions.ipynb
Lecture Slides/VSCode ECS7026P/week_05/lecture/: 01_Multilayer_Perceptrons.ipynb
Lecture Slides/VSCode ECS7026P/week_06/lab/: 01_LeNet.ipynb  02_LeNet_Solutions.ipynb
Lecture Slides/VSCode ECS7026P/week_06/lecture/: 01_Training_Techniques.ipynb  02_Convolutional_Neural_Networks.ipynb
Lecture Slides/VSCode ECS7026P/week_08/lab/: 01_ResNet.ipynb  (+1 more)
(+11 files in other folders)
