[project]
name = "neural-networks-and-deep-learning-resources"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.23.0",
]
